--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 body {
+  background-image: url('./assets/background-stars.svg');
   background-color: rgb(6, 5,36);
   color:white;
 }
@@ -82,8 +83,16 @@ img {
   flex-direction: row;
   padding: 0.3rem 0.6rem;
   border: 1px solid;
-  border-radius: 5px;
+  border-radius: 3px;
   border-color: darkgrey;
+}
+
+.dataValue {
+  font-size: x-large;
+}
+
+.dataName {
+  font-size: small;
 }
 
 @media screen and (max-width: 6000px) {
@@ -184,6 +193,7 @@ img {
     flex-direction: row;
     justify-content: space-between;
     margin: 0.3rem;
+    align-items: center;
   }
   #info {
     width: 100%;
